@@ -15,5 +15,5 @@ build_geoip=m
 build_ipp2p=m
 build_ipset=m
 build_length2=m
-build_portscan=m
+build_lscan=m
 build_quota2=m
